deployment/text-retriever/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: text-retriever
  namespace: text-retriever
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: <ELB_PUBLIC_DNS_NAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: text-retriever-service
            port:
              number: 8000
